[project]
name = "TensorFrost_mykhailo_moroz"
version = "0.1.1"
authors = [
  { name="Mykhailo Moroz", email="michael08840884@gmail.com" },
]
description = "Tensor library with automatic kernel fusion"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Windows",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/MichaelMoroz/TensorFrost"
Issues = "https://github.com/MichaelMoroz/TensorFrost/issues"