[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TensorFrost"
version = "0.7.3"
description = "A static optimizing tensor compiler with a Python frontend…"
authors = [{name = "Mykhailo Moroz", email = "michael08840884@gmail.com"}]
requires-python = ">=3.7"
dependencies = ["numpy"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Environment :: Win32 (MS Windows)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Environment :: GPU",
]

[tool.setuptools.package-data]
"TensorFrost" = ["*.so", "*.pyd", "*.dll", "*.dylib"]