[build-system]
requires = [
    "scikit-build-core>=0.11",
    "pybind11>=2.12",
    "jinja2>=3.1"
]
build-backend = "scikit_build_core.build"

[project]
name = "TensorFrost"
version = "2.0.0.dev0"
description = "A static optimizing tensor compiler with a Python frontend"
authors = [{name = "Mykhailo Moroz", email = "michael08840884@gmail.com"}]
requires-python = ">=3.7"
dependencies = ["numpy"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Environment :: Win32 (MS Windows)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Environment :: GPU",
]
readme = "../README.md"

[tool.setuptools.package-data]
"TensorFrost" = ["*.so", "*.pyd", "*.dll", "*.dylib"]

[tool.scikit-build]

[tool.scikit-build.cmake]
source-dir = ".."

[tool.scikit-build.logging]
level = "INFO"
